feat: update models feat: add controller for categories
