# src/main/java/com/frauas/exercisegenerator/controllers/CategoryController.java
@@ -1,0 +1,38 @@
+package com.frauas.exercisegenerator.controllers;
+
+import java.util.List;
+import java.util.Optional;
+
+import com.frauas.exercisegenerator.documents.Category;
+import com.frauas.exercisegenerator.dtos.CreateCategoryDto;
+import com.frauas.exercisegenerator.services.CategoryService;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/categories")
+public class CategoryController {
+    @Autowired
+    CategoryService categoryService;
+
+    @GetMapping
+    public List<Category> getAllCategories() {
+        return categoryService.getAllCategories();
+    }
+
+    @GetMapping("/id")
+    public Optional<Category> getCategoryById(@PathVariable String id) {
+        return categoryService.getCategoryById(id);
+    }
+
+    @PostMapping
+    public Category createCategory(@RequestBody CreateCategoryDto categoryDto) {
+        return categoryService.createCategory(categoryDto);
+    }
+}
