# src/main/java/com/frauas/exercisegenerator/dtos/CreateCategoryDto.java
@@ -1,0 +1,12 @@
+package com.frauas.exercisegenerator.dtos;
+
+import javax.validation.constraints.NotNull;
+
+import lombok.Data;
+
+@Data
+public class CreateCategoryDto {
+
+    @NotNull
+    private String name;
+}
